mobile menu close click

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
 
 <!-----------------------------БЛОК БОКОВОГО МЕЛЮ------------------------->    
     <aside class="mobile-menu-block mobile-menu-block--hidden ">
+        <div class="mobile-menu-block__mute-area"> <!--Блок для закрытия-->
+
+        </div>
+
         <div class ='mobile-menu'><!--mobile-menu__container-->
 
         <header class="mobile-menu__header">
@@ -382,17 +386,17 @@
             <li class="for-slide price-list__item price-list__item--first ">
               <div class="price-card price-list__card">
 
-                <div class="card-text price-card__card-text card-text--first">
+                <div class="category card-text price-card__card-text card-text--first">
                   Ремонтные услуги
                 </div>
 
-                <div class="card-text price-card__card-text card-text--second">
+                <div class="category card-text price-card__card-text card-text--second">
                   Цена
                 </div>
 
-                <div class="card-text price-card__card-text card-text--third">Срок</div>
-
-                <button class="form-button price-card__button">ЗАКАЗАТЬ</button>
+                <div class=" category card-text price-card__card-text card-text--third">
+                  Срок
+                </div>
 
               </div>
             </li>
@@ -532,7 +536,8 @@
 
     </footer>
 
-  </main><!--Конец блока blocks-without-menu-->
+    </main><!--Конец блока blocks-without-menu-->
+
   </div> <!--Конец глобального контейнера main-blocks-container -->
 
     <!-------------------------ФОРМА ОБРАТНОЙ СВЯЗИ--------------------------------->
