read more button repair

--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,9 @@
         </div>
     </aside>
 
-    <main class="blocks-without-menu">
+    <div class="blocks-without-menu">
 
-    <!-------------------------БЛОК ОСНОВНОГО КОНТЕНТА-------------------->
+    <!-------------------------ШАПКА Сайта---------------------------------->
       <header class="header">
         <!--Часть шапки с логотипом-->
         <div class="logo-side header__logo-side">
@@ -121,10 +121,9 @@
           </button>
         </div>
       </header>
-      
-      <section class="main-block">
+      <!-------------------------БЛОК ОСНОВНОГО КОНТЕНТА-------------------->
+      <main class="main-block">
       <!---------------------------------ОСНОВНАЯ ЧАСТЬ------------------->
-
       <div class="main-container">
         <div class="title">
           <h1 class="title__text">Услуги и Сервисы</h1>
@@ -210,7 +209,8 @@
           </div>
         </section>
       </div> <!--Конец main-container -->
-    </section>
+
+      
 
     <!-------------------------БЛОК СО СПИСКОМ БРЕНДОВ-------------------->
     <section class="brends-block">
@@ -518,8 +518,10 @@
 
     </section><!--Конец блока price-list-block -->
 
+      </main> <!--КОНЕЦ main-block-->
+
     <!-------------------------ОСНОВНОЙ ПОДВАЛ--------------------------------->
-    <footer class="main-footer">
+      <footer class="main-footer">
       <p class="main-footer__first-text" >
         © 2019 CPS<br>
         Разработано командой Apesong 
@@ -534,9 +536,9 @@
         не является публичной офертой
       </p>
 
-    </footer>
+      </footer>
 
-    </main><!--Конец блока blocks-without-menu-->
+  </div><!--Конец блока blocks-without-menu-->
 
   </div> <!--Конец глобального контейнера main-blocks-container -->
 
